@@ -14,6 +14,7 @@ append_zcml = <include file="dev_profiling.zcml" />
 [app]
 eggs += z3c.profiler
         stxnext.pdb
+initialization += os.environ['CHAMELEON_RELOAD'] = 'true'
 
 [test]
 eggs += stxnext.pdb
@@ -21,7 +22,7 @@ eggs += stxnext.pdb
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${app:eggs}
-       icemac.addressbook [test]
+       icemac.addressbook [test,chameleon]
        zc.buildout
 
 [console-scripts]
