@@ -2,6 +2,10 @@
 extends = base.cfg
 parts = ${buildout:base-parts}
 
+
+[app]
+initialization += os.environ['EAGER_PARSING'] = 'true'
+
 [site.zcml]
 append_zcml = <include file="admin.zcml" />
               <include file="default_skin.zcml" />
